# memflow

./: .gitignore  Cargo.toml  FUNCTIONAL_OPTIMIZATION_PROPOSAL.md  IMPLEMENTATION_DETAILS.md  MEMFLOW_优化与新增功能_设计文档.md  MemFlow 功能优化执行计划.md  MemFlow 多显示器支持执行计划 (全景拼接方案).md  MemFlow 性能加固详细执行计划 (Performance Hardening).md  MemFlow 核心接入与填补详细执行计划 (Technical Specification).md  MemFlow 深度技术实施方案 (明确 Dify 架构借鉴).md  PROGRESS.md  PROJECT_ARCHITECTURE.md  README.md  TESTING.md  check_output.txt  default_rapidocr.yaml  eslint.config.js  index.html  memflow_整体分析与优化功能建议_1.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  数据库初始化问题修复总结.md  数据采集极致优化方案.md  架构.md  查看日志.md  测试报告.md  测试改进总结.md  运行时测试检查清单.md  项目整体测试与功能验证Prompt.md  黑名单文件选择问题排查报告.md
.github/workflows/: ci.yml
.trae/documents/: Implement Semantic Search Filters.md  Initialize and Push Code to Remote Repository.md  MemFlow 优化功能点与验证手册.md  MemFlow 项目深度分析与优化建议.md  memflow_下一轮可优化点与执行方案.md  memflow_整体分析与优化功能建议.md  修复 AI 智能搜索无响应并对齐模型配置.md  修复 memflow-mcp 的 TLS 和依赖版本问题.md  修复上下文助理状态与AI开关不同步.md  修复主动助理未启用提示与入口.md  分析并修复数据库初始化失败.md  区分智能提案与问答并减少功能重叠.md  完善技术方案：增加测试策略与核心变更评估.md  完善智能回顾与上下文恢复功能的实施方案.md  实现 2.2 主动式 AI 助理（Proactive Context Assistant）.md  实现 Focus Analytics.md  实现软件绝对路径记录与恢复的完整方案.md  排查 parse_query_intent 超时原因.md  排查结果：FastEmbed 与 Ort 的特殊依赖处理.md  数据采集极致优化方案.md  生成系统架构与差距分析报告.md  编译验证与文档功能核对.md  解释知识图谱与智能提案用法.md
coverage/: coverage-final.json  index.html
coverage/components/: MessageRating.tsx.html  index.html
coverage/contexts/: AppContext.tsx.html  index.html
crates/memflow-core/: Cargo.toml
crates/memflow-core/migrations/: 0001_initial.sql  0002_fix_fts_trigger.sql  0003_fix_fts_null_handling.sql  0004_restore_fts_triggers.sql  0005_chat_and_feedback.sql  0009_add_focus_metrics.sql  0010_ocr_queue.sql
crates/memflow-core/src/: context.rs  db.rs  focus_analytics.rs  lib.rs  redact.rs  vector_db.rs
crates/memflow-core/src/agent/: mod.rs
crates/memflow-core/src/ai/: mod.rs  nlp.rs  prompt_engine.rs  prompts.rs  provider.rs  rag.rs
crates/memflow-mcp/: Cargo.toml
crates/memflow-mcp/src/: context.rs  lib.rs  main.rs  protocol.rs  server.rs
scripts/: dev.ps1  dl.ps1  download_rapidocr.ps1  ocr_server.py  read_logs.ps1  setup_rapidocr_python.ps1  start_ocr_service.bat  start_ocr_service.ps1  test.ps1  test.sh  test_ocr.ps1  test_ocr_api.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  check_output.txt  check_output_2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: clean_data.rs  reproduce_filter.rs  reset_triggers.rs  test_fts.rs  test_ocr_batch.rs  test_ocr_simple.rs  test_screenshot.rs  verify_triggers.rs
src-tauri/migrations/: 0005_chat_and_feedback.sql  0006_agent_automation.sql  0007_add_app_path.sql  0008_add_stats_table.sql
src-tauri/resources/: .gitkeep  config.yaml  prompts.json
src-tauri/src/: app_config.rs  chat.rs  commands.rs  db.rs  desktop_context.rs  focus_analytics.rs  graph.rs  lib.rs  main.rs  ocr_worker.rs  performance.rs  proactive_context.rs  protocol.rs  recorder.rs  redact.rs  scheduler.rs  secure_storage.rs  uia.rs  vector_db.rs  win_event.rs  window_info.rs
src-tauri/src/agent/: mod.rs  tools.rs
src-tauri/src/ai/: mod.rs  nlp.rs  prompt_engine.rs  prompts.rs  provider.rs  rag.rs
src-tauri/src/ocr/: mod.rs  ocr_engine.rs  rapidocr.rs  service.rs
(+38 files in other folders)
