[package]
name = "memflow"
version = "0.1.0"
description = "MemFlow - 智能桌面活动记录与分析工具"
authors = ["MemFlow Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
image = "0.24"
webp = "0.2"
img_hash = "3.2"
xcap = "0.3"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking", "multipart", "stream"] }
keyring = "2.0"
aes-gcm = "0.10"
rand = "0.8"
once_cell = "1.19"
regex = "1.10"
dirs = "5.0"
arboard = "3.4"
tauri-plugin-dialog = "2"
device_query = "0.2.4"
async-trait = "0.1.89"
jieba-rs = "0.7"
scopeguard = "1.2.0"

[features]
# 默认功能
default = ["custom-protocol"]
# 自定义协议支持
custom-protocol = ["tauri/custom-protocol"]
