[package]
name = "memflow-core"
version = "0.1.0"
edition = "2021"
description = "Core logic library for MemFlow - UI-independent business logic"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.89"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking", "multipart", "stream"] }

# Utilities
once_cell = "1.19"
regex = "1.10"

# NLP
jieba-rs = "0.7"

# Clipboard
arboard = "3.4"

# Directories
dirs = "5.0"

# Input device monitoring (for focus analytics)
device_query = "0.2.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
